--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
                 </div>
             </div>
         </div>
-<!--    About    -->
+
         <div class="flexbox-row page about">
+            <div id="bg-placeholder"></div>
             <div class="flexbox-column column-half pad-50 ajc me">
                 <div class="flexbox-column aifs mb-50">
                     <h1 class="mt-30 nametag" style="margin-bottom: 0;">Hrushikesh</h1>
@@ -145,17 +146,22 @@
                 </div>
             </div>
             <div class="flexbox-column column-half pad-50 ajc bio">
-                <span id="bio-text" class="pad-20">
+                <span class="bio-text mbt-10 pad-20">
                     I'm an electronics engineering student at the
                     <a class="a" href="https://www.google.com/search?q=college of engineering, pune" target="_blank">College of Engineering, Pune</a>,
                     by day, and a self-taught computer science student the rest of the time.
                 </span>
+                <span class="bio-text mbt-10 pad-20">
+                    I've been doing web development (using the Django-Postgres stack) since September, 2020, and I finished and sold my first web-app in June, 2021.
+                </span>
+                <span class="bio-text mbt-10 pad-20">
+                    I now aim to transition towards machine learning on the web.
+                </span>
             </div>
         </div>
 
-<!--    Projects    -->
         <div class="flexbox-column page pad-30 page-2">
-            <h1 class="mt-30 ml-30 big" id="projects">Projects</h1>
+            <h1 class="mt-30 ml-30 big decorative-heading" id="projects">Projects</h1>
             <div class="flexbox-row pad-10 project-container">
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
@@ -370,6 +376,87 @@
                                 </svg>
                                 <span class="space-lr"><a href="https://docs.google.com/document/d/e/2PACX-1vQcNAP_Amu-qUr8boGFIQQzBqHX9KWGGHinzoDpYuha_6_OJRaQZLTPRB5kEWYv7xWFqXg3mn_fHt47/pub" target="_blank">webpage</a></span>
                             </span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <h1 class="decorative-heading mt-30 ml-30">Mini-Projects</h1>
+            <div class="flexbox-row pad-10 project-container">
+                <div class="flexbox-column pad-30 mar-20 mini-project">
+                    <h2>Fitness Tracker</h2>
+                    <div class="project-desc">
+                        A small web app to track weight and progress trends from gym reports. Hosted on Heroku with SSL and gym.hrus.in without SSL.
+                    </div>
+                    <div class="flexbox-row pad-10 project-links">
+                        <span class="flexbox-row ajc link">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-world" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <circle cx="12" cy="12" r="9" />
+                              <line x1="3.6" y1="9" x2="20.4" y2="9" />
+                              <line x1="3.6" y1="15" x2="20.4" y2="15" />
+                              <path d="M11.5 3a17 17 0 0 0 0 18" />
+                              <path d="M12.5 3a17 17 0 0 1 0 18" />
+                            </svg>
+                            <span class="space-lr"><a href="https://inbody.herokuapp.com" target="_blank">inbody.herokuapp.com</a></span>
+                        </span>
+                        <span class="flexbox-row ajc link">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-world" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <circle cx="12" cy="12" r="9" />
+                              <line x1="3.6" y1="9" x2="20.4" y2="9" />
+                              <line x1="3.6" y1="15" x2="20.4" y2="15" />
+                              <path d="M11.5 3a17 17 0 0 0 0 18" />
+                              <path d="M12.5 3a17 17 0 0 1 0 18" />
+                            </svg>
+                            <span class="space-lr"><a href="http://gym.hrus.in" target="_blank">gym.hrus.in</a></span>
+                        </span>
+                    </div>
+                </div>
+                <div class="flexbox-column pad-30 mar-20 mini-project">
+                    <h2>COVID-19</h2>
+                    <div class="project-desc">
+                        A frontend app to query the covid19india.org API for case statistics and plot the trend.
+                    </div>
+                    <div class="flexbox-row pad-10 project-links">
+                        <span class="flexbox-row ajc link">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-virus-search" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M17 12a5 5 0 1 0 -5 5" />
+                              <path d="M12 7v-4m-1 0h2" />
+                              <path d="M12 7v-4m-1 0h2" transform="rotate(45 12 12)" />
+                              <path d="M12 7v-4m-1 0h2" transform="rotate(90 12 12)" />
+                              <path d="M12 7v-4m-1 0h2" transform="rotate(180 12 12)" />
+                              <path d="M12 7v-4m-1 0h2" transform="rotate(225 12 12)" />
+                              <path d="M12 7v-4m-1 0h2" transform="rotate(270 12 12)" />
+                              <path d="M12 7v-4m-1 0h2" transform="rotate(315 12 12)" />
+                              <circle cx="17.5" cy="17.5" r="2.5" />
+                              <line x1="19.5" y1="19.5" x2="22" y2="22" />
+                            </svg>
+                            <span class="space-lr"><a href="https://hrus.in/covid" target="_blank">hrus.in/covid</a></span>
+                        </span>
+                    </div>
+                </div>
+                <div class="flexbox-column pad-30 mar-20 mini-project">
+                    <h2>Raycasting</h2>
+                    <div class="project-desc">
+                        A simple javascript implementation of 2D raycasting using the P5.js library. (Works best on desktop/laptop).
+                    </div>
+                    <div class="flexbox-row pad-10 project-links">
+                        <span class="flexbox-row ajc link">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-javascript" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                              <path d="M7.5 8h3v8l-2 -1" />
+                              <path d="M16.5 8h-2.5a0.5 .5 0 0 0 -.5 .5v3a0.5 .5 0 0 0 .5 .5h1.423a0.5 .5 0 0 1 .495 .57l-.418 2.93l-2 .5" />
+                            </svg>
+                            <span class="space-lr"><a href="https://hrus.in/raycasting" target="_blank">hrus.in/raycasting</a></span>
+                        </span>
+                        <span class="flexbox-row ajc link">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                            </svg>
+                            <span class="space-lr"><a href="https://github.com/hrushikeshrv/raycasting" target="_blank">source code</a></span>
                         </span>
                     </div>
                 </div>
