--- a/index.html
+++ b/index.html
@@ -173,8 +173,12 @@
                     <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">ClassBerg</h2>
                         <span class="project-desc">
-                            ClassBerg provides JEE, CET, and NEET coaching classes with a student
+                            ClassBerg was meant to be a SaaS which provided JEE, CET, and NEET coaching classes with a student
                             testing framework, virtual classrooms, and a question database.
+                        </span>
+                        <span class="project-desc">
+                            ClassBerg is now a freelance project which I customize as per individual classes' requirements and provision servers for on their behalf, usually using
+                            <a href="https://heroku.com" class="a" target="_blank">Heroku</a> and <a href="https://aws.amazon.com" class="a" target="_blank">AWS</a>.
                         </span>
                         <span class="flexbox-row pad-10 project-links">
                             <span class="flexbox-row ajc link">
@@ -225,6 +229,69 @@
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
+                        <img src="images/classberg-exed.svg" alt="ClassBerg" width="100px" height="125px">
+                    </div>
+                    <div class="flexbox-column project-content">
+                        <h2 class="big mbt-10">ClassBerg x EXED IIT</h2>
+                        <span class="project-desc">
+                            A customized installation of ClassBerg's source code for <a href="https://exedindia.com" class="a" target="_blank">EXED IIT's domain</a>, with features including student attendance
+                            tracking, assignment creation and submission, and automatic classroom allotment.
+                        </span>
+                        <span class="flexbox-row pad-10 project-links">
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
+                                  <line x1="10" y1="14" x2="20" y2="4" />
+                                  <polyline points="15 4 20 4 20 9" />
+                                </svg>
+                                <span class="space-lr"><a href="https://testing.exedindia.com" target="_blank">testing.exedindia.com</a></span>
+                            </span>
+                        </span>
+                        <span class="flexbox-row mt-10 flair">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
+                              <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
+                              <path d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
+                              <line x1="11" y1="6" x2="11" y2="6.01" />
+                              <line x1="13" y1="18" x2="13" y2="18.01" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-html5" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                              <path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-css3" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                              <path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-javascript" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                              <path d="M7.5 8h3v8l-2 -1" />
+                              <path d="M16.5 8h-2.5a0.5 .5 0 0 0 -.5 .5v3a0.5 .5 0 0 0 .5 .5h1.423a0.5 .5 0 0 1 .495 .57l-.418 2.93l-2 .5" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-sentry" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M3 18a1.93 1.93 0 0 0 .306 1.076a2 2 0 0 0 1.584 .924c.646 .033 -.537 0 .11 0h3a4.992 4.992 0 0 0 -3.66 -4.81c.558 -.973 1.24 -2.149 2.04 -3.531a8.997 8.997 0 0 1 5.62 8.341h4c.663 0 2.337 .005 3 0a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-1.84 3.176c4.482 2.05 7.6 6.571 7.6 11.824" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-stripe" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M11.453 8.056c0 -.623 .518 -.979 1.442 -.979c1.69 0 3.41 .343 4.605 .923l.5 -4c-.948 -.449 -2.82 -1 -5.5 -1c-1.895 0 -3.373 .087 -4.5 1c-1.172 .956 -2 2.33 -2 4c0 3.03 1.958 4.906 5 6c1.961 .69 3 .743 3 1.5c0 .735 -.851 1.5 -2 1.5c-1.423 0 -3.963 -.609 -5.5 -1.5l-.5 4c1.321 .734 3.474 1.5 6 1.5c2.004 0 3.957 -.468 5.084 -1.36c1.263 -.979 1.916 -2.268 1.916 -4.14c0 -3.096 -1.915 -4.547 -5.003 -5.637c-1.646 -.605 -2.544 -1.07 -2.544 -1.807z" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-google-analytics" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <rect x="10" y="9" width="4" height="12" rx="1.105" />
+                              <rect x="17" y="3" width="4" height="18" rx="1.105" />
+                              <circle cx="5" cy="19" r="2" />
+                            </svg>
+                        </span>
+                    </div>
+                </div>
+                <div class="flexbox-row pad-50 mar-20 project">
+                    <div class="flexbox-column">
                         <img src="images/docxlatex.svg" alt="pip install docxlatex" width="100px" height="125px">
                     </div>
                     <div class="flexbox-column project-content">
@@ -267,12 +334,15 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <h1 class="mt-30 ml-30 big decorative-heading" id="work">Work & Study</h1>
+            <div class="flexbox-row pad-10 project-container">
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
                         <img src="images/hrushikeshrv-aoc.svg" alt="Advent Of Code" width="100" height="124">
                     </div>
                     <div class="flexbox-column project-content">
-                        <h2 class="big mbt-10">hrushikeshrv/aoc</h2>
+                        <h2 class="big mbt-10">hrushikeshrv/<br>aoc</h2>
                         <span class="project-desc">
                             A repository of my attempts at the yearly programming contest Advent of Code, conducted every December.
                         </span>
