--- a/index.html
+++ b/index.html
@@ -245,10 +245,41 @@
 <!--        </div>-->
 
         <nav id="quick-nav" class="flexbox-row jcc aifs">
-            <span class="section-link"><a href="#bio">Bio</a></span>
-            <span class="section-link"><a href="#projects">Projects</a></span>
-            <span class="section-link"><a href="#work">Work/Study</a></span>
-            <span class="section-link"><a href="#mini-projects">Mini Projects</a></span>
+            <span class="section-link flexbox-row aic">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-id space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <rect x="3" y="4" width="18" height="16" rx="3" />
+                  <circle cx="9" cy="10" r="2" />
+                  <line x1="15" y1="8" x2="17" y2="8" />
+                  <line x1="15" y1="12" x2="17" y2="12" />
+                  <line x1="7" y1="16" x2="17" y2="16" />
+                </svg>
+                <a href="#bio">Bio</a>
+            </span>
+            <span class="section-link flexbox-row aic">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                </svg>
+                <a href="#projects">Projects</a>
+            </span>
+            <span class="section-link flexbox-row aic">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-device-laptop space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <line x1="3" y1="19" x2="21" y2="19" />
+                  <rect x="5" y="6" width="14" height="10" rx="1" />
+                </svg>
+                <a href="#work">Work/Study</a>
+            </span>
+            <span class="section-link flexbox-row aic">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-apple space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <circle cx="12" cy="14" r="7" />
+                  <path d="M12 11v-6a2 2 0 0 1 2 -2h2v1a2 2 0 0 1 -2 2h-2" />
+                  <path d="M10 10.5c1.333 .667 2.667 .667 4 0" />
+                </svg>
+                <a href="#mini-projects">Mini Projects</a>
+            </span>
         </nav>
 
         <div class="flexbox-column page pad-30 page-projects">
