--- a/index.html
+++ b/index.html
@@ -278,17 +278,27 @@
                   <path d="M12 11v-6a2 2 0 0 1 2 -2h2v1a2 2 0 0 1 -2 2h-2" />
                   <path d="M10 10.5c1.333 .667 2.667 .667 4 0" />
                 </svg>
-                <a href="#mini-projects">Mini Projects</a>
+                <a href="#mini-projects">Minis</a>
+            </span>
+            <span class="section-link flexbox-row ajc">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-code space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                  <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" />
+                  <path d="M10 13l-1 2l1 2" />
+                  <path d="M14 13l1 2l-1 2" />
+                </svg>
+                <a href="https://resume.hrus.in">Resume</a>
             </span>
         </nav>
 
         <div class="flexbox-column page pad-30 page-projects">
             <h1 class="mt-30 ml-30 big decorative-heading" id="projects">Projects</h1>
             <div>
-                <span class="mbt-10 pad-10 flexbox-row aic jcfs" id="project-navbar">
+                <span class="mbt-10 pad-10 flexbox-row aic jcfs sticky-navbar" id="project-navbar">
 
                 </span>
-                <div class="flexbox-row pad-10 project-container">
+                <div class="flexbox-row pad-10 project-container" id="project-card-container">
 
                 </div>
             </div>
@@ -356,7 +366,7 @@
 
             <h1 class="mt-30 ml-30 big decorative-heading" id="work">Work & Study</h1>
             <div>
-                <span class="mbt-10 pad-10 flexbox-row aic jcfs" id="work-navbar">
+                <span class="mbt-10 pad-10 flexbox-row aic jcfs sticky-navbar" id="work-navbar">
 
                 </span>
                 <div class="flexbox-row pad-10 project-container" id="work-card-container">
