--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 <!--        </div>-->
 
         <nav id="quick-nav" class="flexbox-row jcc aifs">
-            <span class="section-link flexbox-row aic">
+            <span class="section-link flexbox-row aic" id="bio-tooltip">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-id space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                   <rect x="3" y="4" width="18" height="16" rx="3" />
@@ -256,14 +256,14 @@
                 </svg>
                 <a href="#bio">Bio</a>
             </span>
-            <span class="section-link flexbox-row aic">
+            <span class="section-link flexbox-row aic" id="projects-tooltip">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                   <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
                 </svg>
                 <a href="#projects">Projects</a>
             </span>
-            <span class="section-link flexbox-row aic">
+            <span class="section-link flexbox-row aic" id="work-tooltip">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-device-laptop space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                   <line x1="3" y1="19" x2="21" y2="19" />
@@ -271,7 +271,7 @@
                 </svg>
                 <a href="#work">Work/Study</a>
             </span>
-            <span class="section-link flexbox-row aic">
+            <span class="section-link flexbox-row aic" id="mini-projects-tooltip">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-apple space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                   <circle cx="12" cy="14" r="7" />
@@ -280,7 +280,7 @@
                 </svg>
                 <a href="#mini-projects">Minis</a>
             </span>
-            <span class="section-link flexbox-row ajc">
+            <span class="section-link flexbox-row ajc" id="resume-tooltip">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-code space-lr" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                   <path d="M14 3v4a1 1 0 0 0 1 1h4" />
@@ -746,6 +746,22 @@
                 trigger: 'click mouseenter',
                 hideOnClick: true,
             })
+
+            // tippy('#bio-tooltip', {
+            //     content: 'About me',
+            // })
+            // tippy('#projects-tooltip', {
+            //     content: 'Big projects I\'ve worked on',
+            // })
+            // tippy('#work-tooltip', {
+            //     content: 'Courses I\'ve taken, other work I\'ve done',
+            // })
+            // tippy('#mini-projects-tooltip', {
+            //     content: 'Small utility projects I\'ve worked on',
+            // })
+            // tippy('#resume-tooltip', {
+            //     content: 'Google Doc containing my resume',
+            // })
         </script>
     </body>
 </html>
